--- a/buildSrc/src/main/resources/website/src/app/app.component.css
+++ b/buildSrc/src/main/resources/website/src/app/app.component.css
@@ -1,14 +1,55 @@
-:host {
-	--content-padding: 10px;
+mat-sidenav-container {
+	width: 100%;
+	height: 100%;
 }
 
-header {
-	display: block;
-	height: 60px;
-	padding: var(--content-padding);
-	box-shadow: 0px 5px 25px var(--shadow-color);
+mat-sidenav-content {
+	overflow: hidden;
 }
 
-.content {
-	padding: var(--content-padding);
+mat-sidenav {
+	width: 24em;
+}
+
+.column {
+	display: flex;
+	flex-flow: column nowrap;
+}
+
+.column-reverse {
+	display: flex;
+	flex-flow: column-reverse nowrap;
+}
+
+.row {
+	display: flex;
+	flex-flow: row nowrap;
+}
+
+.gap {
+	gap: 1em;
+}
+
+.margin {
+	margin: 1em;
+}
+
+.center {
+	align-items: center;
+}
+
+.spacing {
+	flex-grow: 1;
+}
+
+.button-corner {
+	position: absolute;
+	right: 2em;
+	bottom: 2em;
+}
+
+.station-color-dot {
+	border-radius: 0.5em;
+	min-width: 1em;
+	min-height: 1em;
 }
