--- a/buildSrc/src/main/resources/website/src/app/map/map.component.css
+++ b/buildSrc/src/main/resources/website/src/app/map/map.component.css
@@ -1,5 +1,47 @@
-canvas {
+* {
+	font-family: "Noto Sans", "Noto Serif TC", "Noto Serif SC", "Noto Serif JP", "Noto Serif KR", sans-serif;
+	margin: 0;
+	padding: 0;
+	user-select: none;
+}
+
+canvas, .wrapper {
 	display: block;
 	width: 100%;
 	height: 100%;
+}
+
+.labels {
+	left: 0;
+	top: 0;
+	position: absolute;
+}
+
+.labels > div {
+	position: absolute;
+	text-align: center;
+}
+
+.station-name {
+	font-size: 0.6em;
+	font-weight: 600;
+	line-height: 1.2em;
+	user-select: none;
+	white-space: nowrap;
+	text-shadow: -2px -2px 0 var(--mat-app-background-color),
+	0 -2px 0 var(--mat-app-background-color),
+	2px -2px 0 var(--mat-app-background-color),
+	2px 0 0 var(--mat-app-background-color),
+	2px 2px 0 var(--mat-app-background-color),
+	0 2px 0 var(--mat-app-background-color),
+	-2px 2px 0 var(--mat-app-background-color),
+	-2px 0 0 var(--mat-app-background-color);
+}
+
+.station-name.cjk {
+	font-size: 1.2em;
+}
+
+.station-name.material-symbols-outlined {
+	font-size: 1.2em;
 }
