--- a/buildSrc/src/main/resources/website/src/app/component/map/map.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/map/map.component.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Serif+JP&family=Noto+Serif+KR&family=Noto+Serif+SC&family=Noto+Serif+TC&display=swap">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"/>
 
 <div #wrapper class="wrapper">
 	<canvas #canvas></canvas>
 	<div class="labels">
 		<div *ngFor="let textLabel of textLabels" style="{{'transform:translate(-50%,0)translate('+textLabel.x+'px,'+textLabel.z+'px)'}}">
-			<div *ngFor="let textLabelText of textLabel.text" class="station-name {{textLabelText.isCjk?'cjk':''}}">{{ textLabelText.name }}</div>
-			<div class="station-name material-symbols-outlined">{{ textLabel.icons }}</div>
+			<div *ngFor="let textLabelText of textLabel.text" class="station-name text {{textLabelText.isCjk?'cjk':''}}">{{ textLabelText.name }}</div>
+			<div class="row">
+				<div class="spacing"></div>
+				<mat-icon class="station-name icon" *ngFor="let icon of textLabel.icons">{{ icon }}</mat-icon>
+				<div class="spacing"></div>
+			</div>
 		</div>
 	</div>
 	<div class="loading-background" style="{{'opacity:'+(loading?1:0)}}">
