--- a/buildSrc/src/main/resources/website/src/app/component/panel/panel.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/panel/panel.component.html
@@ -2,19 +2,24 @@
 	<mat-expansion-panel expanded>
 		<mat-expansion-panel-header>
 			<mat-panel-title>Layers</mat-panel-title>
-			<mat-panel-description>
-				This is a summary of the content
-			</mat-panel-description>
 		</mat-expansion-panel-header>
 
-		<div class="column gap">
-			<div class="row-reverse gap center" *ngFor="let routeType of getRouteTypes()">
-				<mat-button-toggle-group>
-					<mat-button-toggle>Hidden</mat-button-toggle>
-					<mat-button-toggle>Solid</mat-button-toggle>
-					<mat-button-toggle>Hollow</mat-button-toggle>
+		<div class="column gap_small">
+			<div class="row-reverse gap center" *ngFor="let routeType of routeTypes">
+				<mat-button-toggle-group #group="matButtonToggleGroup" [value]="getSelected(routeType[0])?.toString()" (change)="onSelect(routeType[0], group.value)">
+					<mat-button-toggle value="0">
+						<mat-icon>visibility_off</mat-icon>
+					</mat-button-toggle>
+					<mat-button-toggle value="1">
+						<mat-icon>horizontal_rule</mat-icon>
+					</mat-button-toggle>
+					<mat-button-toggle value="2">
+						<mat-icon>drag_handle</mat-icon>
+					</mat-button-toggle>
 				</mat-button-toggle-group>
 				<div class="spacing"></div>
+				<div class="shrink">{{ routeType[1].text }}</div>
+				<mat-icon>{{ routeType[1].icon }}</mat-icon>
 			</div>
 		</div>
 	</mat-expansion-panel>
