--- a/buildSrc/src/main/resources/website/src/app/app.component.html
+++ b/buildSrc/src/main/resources/website/src/app/app.component.html
@@ -1,25 +1,15 @@
-<mat-sidenav-container [hasBackdrop]="false">
-	<mat-sidenav #sidenav position="end" disableClose>
-		<div class="column-reverse">
-			<div class="column margin">
-				<app-search [label]="'Search for anything...'" [includeRoutes]="true"/>
-				<app-panel/>
-			</div>
-
-			<mat-toolbar>
-				<div>&nbsp;{{ getTitle() }}</div>
-				<div class="spacing"></div>
-				<button mat-icon-button aria-label="Close Menu" (click)="sidenav.close()">
-					<mat-icon>close</mat-icon>
-				</button>
-			</mat-toolbar>
-		</div>
-	</mat-sidenav>
-
-	<mat-sidenav-content>
-		<app-map/>
-		<button mat-fab class="button-corner" color="" aria-label="Menu" (click)="sidenav.open()">
+<app-side #sideStation>
+	<app-side #sideMain>
+		<app-map (onClickStation)="onClickStation($event, sideStation)"/>
+		<button mat-fab class="button-corner" color="" aria-label="Menu" (click)="sideMain.open()">
 			<mat-icon>menu</mat-icon>
 		</button>
-	</mat-sidenav-content>
-</mat-sidenav-container>
+		<div sidenav class="column margin">
+			<app-search label="Search for anything..." [includeRoutes]="true" (onClickStation)="onClickStation($event, sideStation)"/>
+			<app-panel/>
+		</div>
+		<div title>{{ getTitle() }}</div>
+	</app-side>
+	<app-station sidenav/>
+	<div title>{{ getSelectedStationName() }}</div>
+</app-side>
