--- a/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
@@ -4,17 +4,17 @@
 </mat-form-field>
 
 <mat-autocomplete #auto="matAutocomplete">
-	<mat-option *ngFor="let station of searchedStations$ | async" (click)="zoomToStation(station.id)">
+	<mat-option *ngFor="let station of searchedStations$ | async" (click)="onClickStation.emit(station.id)">
 		<div class="row gap center">
 			<div class="station-color-dot" style="{{'background-color:#'+station.color}}"></div>
-			<div>{{ station.name }}</div>
+			<div>{{ station.name | formatName }}</div>
 		</div>
 	</mat-option>
 	<mat-divider *ngIf="hasStations && hasRoutes"/>
-	<mat-option *ngFor="let route of searchedRoutes$ | async">
+	<mat-option *ngFor="let route of searchedRoutes$ | async" (click)="onClickRoute.emit(route.id)">
 		<div class="row gap center">
 			<div class="station-color-dot" style="{{'background-color:#'+route.color}}"></div>
-			<div>{{ route.name }}</div>
+			<div>{{ route.name | formatName }}</div>
 		</div>
 	</mat-option>
 </mat-autocomplete>
