--- a/buildSrc/src/main/resources/website/src/styles.css
+++ b/buildSrc/src/main/resources/website/src/styles.css
@@ -2,6 +2,7 @@
 /*@import "@angular/material/prebuilt-themes/pink-bluegrey.css";*/
 
 * {
+	font-family: "Roboto", sans-serif;
 	margin: 0;
 	padding: 0;
 	user-select: none;
