--- a/buildSrc/src/main/resources/website/src/app/component/map/map.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/map/map.component.css
@@ -4,17 +4,16 @@
 	user-select: none;
 }
 
-canvas, .wrapper {
+canvas {
 	position: absolute;
 	transition: opacity 0.2s;
 	width: 100%;
 	height: 100%;
 }
 
-.labels {
-	left: 0;
-	top: 0;
-	position: absolute;
+.wrapper {
+	width: 100%;
+	height: 100%;
 }
 
 .label {
@@ -50,7 +49,6 @@ canvas, .wrapper {
 	font-family: "Noto Sans", "Noto Serif TC", "Noto Serif SC", "Noto Serif JP", "Noto Serif KR", sans-serif;
 	font-weight: 600;
 }
-
 
 .station-name.icon {
 	font-size: 1.2em;
