--- a/buildSrc/src/main/resources/website/src/app/component/side/side.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/side/side.component.html
@@ -9,7 +9,7 @@
 				<div>&nbsp;</div>
 				<ng-content select="[title]"/>
 				<div class="spacing"></div>
-				<button mat-icon-button aria-label="Close Menu" (click)="onClose()">
+				<button mat-icon-button aria-label="Close Menu" (click)="onCloseMenu()">
 					<mat-icon>close</mat-icon>
 				</button>
 			</mat-toolbar>
