--- a/buildSrc/src/main/resources/website/src/app/component/panel/panel.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/panel/panel.component.html
@@ -1,6 +1,6 @@
 <div class="column gap-small">
 	<div class="row-reverse gap center" *ngFor="let routeType of routeTypes">
-		<mat-button-toggle-group #group="matButtonToggleGroup" [value]="getSelected(routeType[0])?.toString()" (change)="onSelect(routeType[0], group.value)">
+		<mat-button-toggle-group hideSingleSelectionIndicator #group="matButtonToggleGroup" [value]="getSelected(routeType[0])?.toString()" (change)="onSelect(routeType[0], group.value)">
 			<mat-button-toggle value="0">
 				<mat-icon>visibility_off</mat-icon>
 			</mat-button-toggle>
